--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://bandarisgalaxy.github.io/h45h-g4l4xy.github.io/"
+url: "https://bandarisgalaxy.github.io"
 
 github:
   username: H45h_G4L4XY # change to your GitHub username
@@ -151,7 +151,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "/h45h-g4l4xy.github.io"
 
 # ------------ The following options are not recommended to be modified ------------------
 
